Finished template of website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <div class="top-container">
         <!-- Navigation bar -->
         <nav class="navigation">
-            <h3>Header Logo</h3>
+            <h3>Website Logo</h3>
             <ul>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact Us</a></li>
